# cayley-rust

./: .travis.yml  Cargo.toml  README.md  search-index.js
cayley/: index.html  stability.html  stability.json
cayley/errors/: enum.GraphRequestError.html  index.html  type.GraphResult.html
cayley/graph/: enum.CayleyAPIVersion.html  index.html  struct.Graph.html  struct.GraphNode.html  struct.GraphNodes.html
cayley/path/: index.html  struct.Morphism.html  struct.Vertex.html  trait.Compile.html  trait.Path.html  trait.Query.html  trait.Reuse.html
cayley/selector/: enum.NodeSelector.html  enum.PredicateSelector.html  enum.TagSelector.html  index.html
examples/: 30kmoviedata.rs  testdata.rs
implementors/cayley/path/: trait.Compile.js
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Show.js
implementors/serialize/serialize/: trait.Decodable.js
src/: error.rs  errors.rs  graph.rs  graph_error.rs  lib.rs  path.rs  selector.rs
src/cayley/Users/shamansir/Workspace/cayley-rust/src/: errors.rs.html  graph.rs.html  lib.rs.html  path.rs.html  selector.rs.html
tests/: 30kmoviedata.rs  connection.rs  path_compile.rs  query.rs  rustdoc_path_2.rs
