[package]
name = "cayley"
version = "0.0.1"
authors = ["Ulric Wilfred <shaman.sir@gmail.com>"]

[lib]
name = "cayley"
doc = true
# doctest = false

[dependencies.url]
git = "https://github.com/servo/rust-url"
doc = false

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http.git"
doc = false
